--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "@buildit/gravity-particles": "^0.3.0",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.5.1",
+    "@types/dompurify": "^2.0.0",
     "@types/dotenv": "6.1.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "^16.9.4",
     "@types/react-dom": "16.9.1",
+    "@types/react-html-parser": "^2.0.1",
     "@types/react-router-dom": "5.1.0",
     "apollo-boost": "^0.4.4",
+    "dompurify": "^2.0.7",
     "graphql": "^14.5.8",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
